[project]
name = "draftjs_exporter"
version = "5.2.0"
description = "Library to convert rich text from Draft.js raw ContentState to HTML"
readme = "README.md"
license = "MIT"
authors = [{ name = "Springload", email = "hello@springload.co.nz" }]
requires-python = ">=3.9"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Word Processors",
  "Typing :: Typed",
]

[project.urls]
Source = "https://github.com/springload/draftjs_exporter"
Tracker = "https://github.com/springload/draftjs_exporter/issues"
Changelog = "https://github.com/springload/draftjs_exporter/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Lower version bound for lxml - choose a version with:
# - lxml>=4.4.0 attribute sorting
# - Pre-built wheels on the lowest-supported Python version.
# - The last patch release of a given minor version to benefit from bug fixes.
# Check pre-built wheels: https://pypi.org/project/lxml/4.6.5/#files
# Upper version bound for lxml: avoid breaking changes without testing to confirm
# there are no output changes in the new version.
lxml = ["lxml>=4.6.5,<7"]
html5lib = ["beautifulsoup4>=4.4.1,<5", "html5lib>=0.999,<2"]

[dependency-groups]
dev = [
  "pytest>=7.4.3",
  "pytest-cov>=4.1.0",
  "pytest-memray>=1.7.0",
  "ruff>=0.1.9",
  "ty==0.0.8",
  # Benchmark dependencies.
  "markov_draftjs>=2.0.0",
  "memray>=1.15.0",
  "psutil>=5.9.7",
  # HTML builders.
  "lxml>=4.2.0,<7",
  "beautifulsoup4>=4.4.1,<5",
  "html5lib>=0.999,<2",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "draftjs_exporter"
module-root = ""

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort
# T20: flake8-print
# BLE: flake8-blind-except
# C4: flake8-comprehensions
select = ["E", "F", "I", "T20", "BLE", "C4"]
ignore = ["E501"]
